tests/incremental_rename_file/incremental_rename_file.exp
Error --------------------------------------------------------------------------------------------------------- c.js:5:1

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:5:1
   5| x as string;
      ^

References:
   foo/a.js:4:16
   4| export default 0;
                     ^ [1]
   c.js:5:6
   5| x as string;
           ^^^^^^ [2]



Found 1 error
Error --------------------------------------------------------------------------------------------------------- c.js:5:1

Cannot cast `x` to string because number [1] is incompatible with string [2]. [incompatible-type]

   c.js:5:1
   5| x as string;
      ^

References:
   bar/a.js:4:16
   4| export default 0;
                     ^ [1]
   c.js:5:6
   5| x as string;
           ^^^^^^ [2]



Found 1 error
